k8s/OrderService/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: orders-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: orders
  template:
    metadata:
      labels:
        app: orders
    spec:
      containers:
        - name: orders-container
          image: yezhyck/orders-image:1.0
          imagePullPolicy: "Always"
          ports:
            - containerPort: 3001
