k8s/OrderService/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: orders-service
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 3001
  selector:
    app: orders
