k8s/OrderService/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: orders-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - http:
        paths:
          - path: /orders
            pathType: "Prefix"
            backend:
              service:
                name: orders-service
                port:
                  number: 80
